--- a/static/css/patches.css
+++ b/static/css/patches.css
@@ -10,3 +10,9 @@ body {
     color: #cc2a41;
     font-weight: bold;
 }
+
+#header #logo {
+    width: 88px;
+    height: 55px;
+    background-size: contain;
+  }
