--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,6 @@
 {{ define "main" }}
+<h1>{{ .Title }}</h1>
+
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 <!-- TODO: gallery -->
   <div class="content" itemprop="articleBody">
