Various patches and nav tweaks.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<h1>{{ .Title }}</h1>
+<!-- <h1>{{ .Title }}</h1> -->
 
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 <!-- TODO: gallery -->
